# bbqvec

./: .gitignore  LICENSE  README.md  backend.go  backend_disk.go  backend_memory.go  backend_quantized_memory.go  counting_bitmap.go  disk_test.go  emperical_test.go  errors.go  go.mod  go.sum  integration_test.go  micro_test.go  quantization.go  quantization_f16.go  quantization_f16_test.go  result.go  speed_test.go  topk.go  vector.go  vector_store.go  vector_store_split.go
.github/workflows/: rust.yml
cmd/run-ann-benchmark/: main.go
cmd/run-bigann/: main.go
rust/: Cargo.toml
rust/benches/: main_benchmark.rs  memory_store.rs  micro.rs
rust/cmd/test-recall/: Cargo.toml
rust/cmd/test-recall/src/: main.rs
rust/src/: backend.rs  backend_disk.rs  backend_memory.rs  bitmaps.rs  counting_bitmap.rs  helpers.rs  lib.rs  quantization.rs  result.rs  unaligned_f32.rs  vector.rs  vector_file.rs  vector_store.rs
rust/src/spaces/: simple.rs  simple_avx.rs  simple_neon.rs  simple_sse.rs
rust/tests/: basic_test.rs  search.rs
