[package]
name = "bbqvec"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/daxe-ai/bbqvec"
authors = ["Daxe, Inc.", "Barak Michener"]
readme = "../README.md"
license = "Apache-2.0"
keywords = ["vector", "database", "ann", "knn", "bitmap", "search", "nearest-neighbor", "embedding", "embedded"]
categories = ["algorithms", "data-structures", "database-implementations"]
description = "Scalable, embeddable, vector storage for approximate K-nearest-neighbors (AKNN)"

#[workspace]
#members = ["cmd/test-recall"]

[dependencies]
anyhow = "1.0.86"
argminmax = {version = "0.6.2", default-features = false, features = ["float"]}
bitvec = {version = "1", features = ["serde"]}
bytemuck = {version = "1.16.0", features = ["derive", "extern_crate_alloc"]}
byteorder = "1.5.0"
croaring = "1.1.0"
half = {version = "2.4.1", features = ["std", "zerocopy"]} 
memmap2 = "0.9.5"
rand = "0.8.5"
rayon = "1.10.0"
roaring = {version = "0.10.4", features = ["serde"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.128"
thiserror = "1.0.61"

[dev-dependencies]
criterion = "0.5.1"
pprof = {version = "0.13.0", features = ["flamegraph", "protobuf-codec", "protobuf", "criterion"]}

[[bench]]
name = "main_benchmark"
harness = false

[profile.bench]
debug = true
